[package]
name = "beep-boop"
version = "0.1.0"
description = "Experimental p2panda demo client "
authors = [
  "sophiiistika <sophiiistika@mailbox.org>",
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "cafca <cafca@001.land>"
]
license = "MIT"
repository = "https://github.com/p2panda/beep-boop"
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0.0-beta.1", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
